@@ -13,6 +13,6 @@ VCS_EXTRA=""
 VCS_FULL_HASH="0ec5c47a272f22c1a7ce97ba07e8678625cf157a"
 VCS_SHORT_HASH="0ec5c47"
 
-VCS_WC_MODIFIED="1"
+VCS_WC_MODIFIED="0"
 
 # end
