@@ -1,0 +1,18 @@
+/* Generated by autorevision - do not hand-hack! */
+
+let VCS_TYPE			= "git"
+let VCS_BASENAME		= "autorevision"
+let VCS_UUID:	String?	= "da2830f81fec4c6ebce8ebf23f35b0e6b066c149"
+let VCS_NUM:	Int		= 243
+let VCS_DATE			= "2014-07-05T00:00:58-0400"
+let VCS_BRANCH:	String	= "master"
+let VCS_TAG:	String?	= "v/1.9"
+let VCS_TICK:	Int?	= 8
+let VCS_EXTRA:	String?	= nil
+
+let VCS_FULL_HASH:		String	= "a066526be1402278369422728f8798dc0f268768"
+let VCS_SHORT_HASH:		String	= "a066526"
+
+let VCS_WC_MODIFIED:	Bool	= false
+
+/* end */
