@@ -2,6 +2,7 @@
 
 Repository head:
   Cover the case of split repository heads.
+  Add initial Swift output support.
 
 1.9 @ 2014-5-23
   Add a logo.
